<resources>
    <string name="welcome_title">Welcome to System Shell Box!</string>
    <string name="welcome_content">Thank you for installing this app!</string>
    <string name="update_title">Updated to Build %d!</string>
    <string name="update_log_content">Content of this update:\n0.DEBUG!\n\nSee the update log for detailed changes</string>
    <string name="warning_title">You may be a victim of software piracy.</string>
    <string name="warning_content">Signature tampering detected!\nAlthough not to stop you from continuing to use, but it is best not to use! Third-party versions may steal your personal information!\n\nOfficial version download link: https://github.com/kgultrt/SystemShellBox</string>
    <string name="app_name">System Shell Box</string>
    <string name="term_name">Shell</string>
    <string name="menu">Menu</string>
    <string name="error">Error!</string>
    <string name="ver">Version</string>
    <string name="compilation_time">Compilation Time</string>
    <string name="build_type">Build Type</string>
    <string name="build_debug">Debug version</string>
    <string name="build_release">Release version</string>
    <string name="build_unknown">Unknow</string>
    <string name="term_install_status">Terminal installation status</string>
    <string name="git_commit_short_hash">Git Commit Short Hash</string>
    <string name="git_commit_author">Git Commit Author</string>
    <string name="git_branch_name">Git Branch Name</string>
    <string name="signature_expected">Expecting signature md5</string>
    <string name="signature_APK">From APK md5</string>
    <string name="signature_API">From API md5</string>
    <string name="signature_SVC">From SVC md5</string>
    <string name="root_directory">Root Directory</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="previous_folder_tip">(Return to the previous)</string>
    <string name="welcome_title_1">Welcome to System Shell Box</string>
    <string name="welcome_desc_1">A powerful file management and system tool application that gives you full control on your Android device.</string>
    <string name="welcome_title_2">Permission Description</string>
    <string name="welcome_desc_2">To use file management features normally, we need the following permissions:\n• Storage: Access and manage files\n• Notifications: Display operation progress</string>
    <string name="welcome_title_3">Main Features</string>
    <string name="welcome_desc_3">• Dual-panel file manager\n• Terminal emulator integration\n• Batch file operations\n• Bookmarks and history\n• System information viewer</string>
    <string name="welcome_title_4">Permission Request</string>
    <string name="welcome_desc_4">Please allow the app to access device storage, which is fundamental for file management features. You can modify these permissions anytime in system settings.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="step_info">Step %1$d/%2$d</string>
    <string name="permission_required">Requires permission</string>
    <string name="permission_rationale_detail">Some features require storage permissions to work properly. Please grant permissions for the full experience.</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="license_title">GNU General Public License v3.0</string>
    <string name="permission_title">Required Permissions</string>
    <string name="permission_desc">In order to use the application function normally, the following permissions are required:</string>
    <string name="complete_title">Be Ready</string>
    <string name="complete_desc">Everything is set up and you are ready to start using the System Shell Box!</string>
    <string name="storage_permission_title">Storage Permission</string>
    <string name="storage_permission_desc">Used to access device storage and manage files and folder</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_desc">Notification for displaying application status and operation result</string>
    <string name="permission_granted">Permission granted</string>
    <string name="grant_permissions">Grant Permission</string>
    <string name="license_load_error">Unable to load license text</string>
    <string name="settings_follow">Follow System</string>
    <string name="settings_enable">Enable</string>
    <string name="settings_disable">Disadle</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_lang">Language</string>
    <string name="settings_lang_summary">Select Application Language</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_appearance_theme">Theme</string>
    <string name="settings_appearance_summary">Select Application Theme</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_enable">Enable Notification</string>
    <string name="settings_notification_enable_summary">Receive application notification</string>
    <string name="settings_notification_vibration">Vibration</string>
    <string name="settings_notification_vibration_summary">Vibrate on notification</string>
    <string name="settings_notification_sound">Sound</string>
    <string name="settings_notification_sound_summary">Play sound on notification</string>
    <string name="wip">Coming Soon...</string>
    <string name="wip_back">In the process of remaking...</string>
    <string name="installing">Installation...</string>
    <string name="preparing">Preparing...</string>
    <string name="downloading">Downloading...</string>
    <string name="extracting">Extracting...</string>
    <string name="setting_permissions">Setting permission...</string>
    <string name="completed">Complete</string>
    <string name="term_install_title">Environment Installation</string>
    <string name="term_install_msg">POSIX environment needs to be installed to use terminal features</string>
    <string name="term_install_auto">Auto Download and Install</string>
    <string name="term_install_file">Manual Installation</string>
    <string name="term_install_failed">User cancelled installation</string>
    <string name="term_install_get_ver">Getting version information</string>
    <string name="term_install_get_ver2">Connecting to GitHub...</string>
    <string name="term_install_failed2">Failed to get version info, continue downloading?</string>
    <string name="term_install_date">Release Date: </string>
    <string name="term_install_download">Download and Install</string>
    <string name="term_install_found_new">New version found </string>
    <string name="term_install_update">Update</string>
    <string name="term_install_ignore">Ignore</string>
    <string name="term_install_tip">Tip</string>
    <string name="term_install_continue">Continue</string>
    <string name="term_install_file_hint">Please enter complete ZIP file path</string>
    <string name="term_install_empty">File path is empty</string>
    <string name="term_install_pree">Preparing to extract files...</string>
    <string name="term_install_e">Extracting files...</string>
    <string name="term_install_setting_permissions">Setting permissions...</string>
    <string name="term_install_complete">Installation completed</string>
    <string name="term_install_failed3">File extraction failed, please check file path and permissions</string>
    <string name="term_install_pred">Preparing download...</string>
    <string name="term_install_connecting">Connecting to server...</string>
    <string name="term_install_d">Downloading environment files...</string>
    <string name="term_install_failed4">Installation failed: </string>
    <string name="term_install_failed5">Network connection error</string>
    <string name="term_install_failed6">File extraction failed</string>
    <string name="term_install_not">Not installed</string>
    <string name="term_install_auto_unknow">Auto installed, version unknown</string>
    <string name="term_install_auto_version">Auto installed, version </string>
    <string name="term_install_check">Check for updates</string>
    <string name="term_install_already">Already latest version</string>
    <string name="term_install_network">Update check failed, please check network connection</string>
    <string name="high_android_permission_request">Please grant permission to manage all files!</string>
    <string name="request_appect_android_permission_request">Please grant permission!</string>
    <string name="permission_desc_dialog1">Permission Description</string>
    <string name="permission_desc_dialog2">Storage permission is required to read the file list</string>
    <string name="retry_request_android_permission">Retry Request</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="reject_permanently_android_permission_request">Permission has been permanently denied</string>
    <string name="go_to_setting_open">Please manually enable the permission in Settings</string>
    <string name="go_set">Go to Settings</string>
    <string name="notification_permission_rationale">Notification permission is required to display file operation progress and results, which you can enable in System Settings</string>
    <string name="notifications_denied">You have denied notification rights and some functionality may be limited</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="notification_channel_name">Background task</string>
    <string name="notification_channel_description">Display background task execution status</string>
    <string name="notification_channel_start">Task start execution</string>
    <string name="notification_channel_comp">Task Completed</string>
    <string name="notification_channel_fail">Task failed</string>
    <string name="notification_channel_nuke">Unknown error</string>
    <string name="notification_channel_canc">Task Cancelled</string>
    <string name="notification_channel_unkn">Task status unknown</string>
    <string name="notification_channel_proc">Task in progress</string>
    <string name="notification_channel_now">Current Progress: </string>
    <string name="notification_channel_title">Background task notification</string>
    <string name="notification_channel_hide">Hide</string>
    <string name="notification_channel_act">Active Task</string>
    <string name="notification_channel_rec">Recently completed</string>
    <string name="notification_channel_ready">Ready</string>
    <string name="notification_channel_multi">In operation</string>
    <string name="notification_channel_idle">Idle</string>
    <string name="notification_channel_recent">View Recent Task</string>
    <string name="notification_channel_tasks"> Task(s)</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="storage_info">Storage Info</string>
    <string name="about">About</string>
    <string name="processing">Processing...</string>
    <string name="jump_to_directory">Jump to...</string>
    <string name="confirm">OK</string>
    <string name="invalid_directory">The path is invalid or inaccessible</string>
    <string name="input_directory_hint">Enter the full directory path</string>
    <string name="install_required_files">First, Go Back and open Installer, and try again.</string>
    <string name="disk_info_unavailable">Storage information unavailable</string>
    <string name="disk_info_all">Total</string>
    <string name="disk_info_used">Used</string>
    <string name="disk_info_available">Available</string>
</resources>